[package]

name    = "art-stamps"
description = "Artwork stamps tool to quickly stamp out shaapes and make beautiful castles or houses as an SVG"
repository = "https://github.com/danielrh/stamps"
documentation = "https://github.com/danielrh/stamps"
version = "0.0.1"
license = "MIT"
authors = [ "Daniel Reiter Horn <danielrh@users.sourceforge.net>"]
keywords = ["SDL", "windowing", "graphics", "api", "engine"]
categories = ["rendering","api-bindings","game-engines","multimedia"]

[[bin]]
name="art-stamps"

[dependencies]
"sdl2" = {version="0.34.3"}
"serde" = {version="1.0.98"}
"serde_derive" = {version="1.0.98"}
"serde-xml-rs" = {version="0.3.1"}
"regex" = {version="1"}


[target.wasm32-unknown-emscripten]
rustflags = [
    "-C", "link-arg=-s", "-C", "link-arg=USE_SDL=2",
]
